<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <ImageView
        android:contentDescription="@string/home_description"
        android:id="@+id/home"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:srcCompat="@drawable/ic_home_black_48dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/queue_id"
        android:textAlignment="center"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/queue_id"
        android:paddingTop="90dp"
        android:layout_below="@+id/home"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/q_details"
        android:textColor="@color/black"
        android:gravity="center_vertical"
        android:textSize="17sp"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_alignTop="@+id/queue_image"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/book_button"
        android:clickable="true"
        android:textColor="@color/black"
        android:background="@drawable/roundedbutton"
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:text="@string/make_booking_button"
        android:layout_below="@+id/q_details"
        android:layout_toStartOf="@+id/home" />

    <ImageView
        android:contentDescription="@string/queue"
        android:id="@+id/queue_image"
        android:layout_width="160dp"
        android:layout_height="130dp"
        app:srcCompat="@mipmap/queue"
        android:layout_below="@+id/home"
        android:layout_alignParentStart="true"
        android:layout_marginTop="112dp" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/search_q_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:fabSize="mini"
        app:srcCompat="@mipmap/ic_search_black_48dp"
        android:layout_below="@+id/queue_id"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>
