<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/relative_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background2"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">


    <EditText
        android:id="@+id/booking_reference"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:ems="10"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:hint="@string/name_your_appointment" />

    <Button
        android:id="@+id/book"
        android:background="@drawable/roundedbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/booking_reference"
        android:layout_centerHorizontal="true"
        android:text="@string/book" />

    <TextView
        android:id="@+id/queue_id_display"
        android:paddingStart="15dp"
        android:paddingEnd="0dp"
        android:layout_width="110dp"
        android:layout_height="50dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginEnd="83dp"
        android:layout_alignBottom="@+id/book_image"
        android:layout_alignParentEnd="true" />

    <ImageView
        android:contentDescription="@string/book_image"
        android:id="@+id/book_image"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        app:srcCompat="@mipmap/book_image"
        android:layout_alignParentTop="true"
        android:layout_alignEnd="@+id/book"
        android:layout_marginEnd="44dp" />

</RelativeLayout>
